[package]
name = "t_hbd"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "AudioContext",
    "BaseAudioContext",
    "AudioDestinationNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "GainNode",
    "HtmlAudioElement",
    "Response",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "DomTokenList",
    "MouseEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "KeyboardEvent",
    "CssStyleDeclaration",
    "HtmlElement",
    "HtmlInputElement",
    "Performance",
    "Storage",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3"
gloo-net = "0.6"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
